@@ -5,9 +5,8 @@ import top.ellan.mahjong.model.SeatWind;
 import top.ellan.mahjong.render.display.DisplayEntities;
 import top.ellan.mahjong.render.scene.MeldView;
 import top.ellan.mahjong.riichi.model.ScoringStick;
-import top.ellan.mahjong.table.core.MahjongTableSession;
-import top.ellan.mahjong.table.core.TableRenderSnapshot;
-import top.ellan.mahjong.table.core.TableSeatRenderSnapshot;
+import top.ellan.mahjong.render.snapshot.TableRenderSnapshot;
+import top.ellan.mahjong.render.snapshot.TableSeatRenderSnapshot;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.EnumMap;
@@ -36,8 +35,6 @@ public final class TableRenderLayout {
     private static final double WALL_TILE_STEP = TILE_WIDTH + TILE_PADDING;
     private static final double UPRIGHT_TILE_Y = TILE_HEIGHT / 2.0D;
     private static final double FLAT_TILE_Y = TILE_DEPTH / 2.0D;
-    // Keep kakan near table height and use only a tiny lift to avoid z-fighting.
-    private static final double KAKAN_STACK_Y_OFFSET = 0.001D;
     private static final double SELECTED_HAND_TILE_Y_OFFSET = 0.06D;
     private static final int WALL_TILES_PER_SIDE = 34;
     private static final int TOTAL_WALL_TILES = 136;
@@ -74,6 +71,22 @@ public final class TableRenderLayout {
         );
     }
 
+    public static SeatLayoutPlan precomputeSeatOnly(TableRenderSnapshot snapshot, SeatWind wind) {
+        if (snapshot == null || wind == null) {
+            throw new IllegalArgumentException("snapshot and wind are required");
+        }
+        Point displayCenter = new Point(snapshot.centerX(), snapshot.centerY() + DISPLAY_CENTER_Y_OFFSET, snapshot.centerZ());
+        return precomputeSeat(displayCenter, snapshot, snapshot.seat(wind));
+    }
+
+    public static SeatLayoutPlan precomputePrivateHandOnly(double centerX, double centerY, double centerZ, TableSeatRenderSnapshot seat) {
+        if (seat == null) {
+            throw new IllegalArgumentException("seat is required");
+        }
+        Point displayCenter = new Point(centerX, centerY + DISPLAY_CENTER_Y_OFFSET, centerZ);
+        return precomputePrivateHandSeat(displayCenter, seat);
+    }
+
     private static SeatLayoutPlan precomputeSeat(
         Point displayCenter,
         TableRenderSnapshot snapshot,
@@ -103,9 +116,10 @@ public final class TableRenderLayout {
 
         List<Point> publicHandPoints = new ArrayList<>(seat.hand().size());
         List<Point> privateHandPoints = new ArrayList<>(seat.hand().size());
+        List<Integer> selectedHandTileIndices = seat.selectedHandTileIndices();
         for (int tileIndex = 0; tileIndex < seat.hand().size(); tileIndex++) {
             publicHandPoints.add(handTilePoint(displayCenter, seat, wind, tileIndex, false));
-            privateHandPoints.add(handTilePoint(displayCenter, seat, wind, tileIndex, tileIndex == seat.selectedHandTileIndex()));
+            privateHandPoints.add(handTilePoint(displayCenter, seat, wind, tileIndex, selectedHandTileIndices.contains(tileIndex)));
         }
 
         return new SeatLayoutPlan(
@@ -120,6 +134,45 @@ public final class TableRenderLayout {
             precomputeDiscards(displayCenter, seat, snapshot.openDoorSeat()),
             precomputeMelds(displayCenter, seat),
             precomputeSticks(displayCenter, seat)
+        );
+    }
+
+    private static SeatLayoutPlan precomputePrivateHandSeat(Point displayCenter, TableSeatRenderSnapshot seat) {
+        SeatWind wind = seat.wind();
+        Point handBase = handDirectionBase(displayCenter, wind);
+        float yaw = seatYaw(wind);
+        if (seat.playerId() == null) {
+            return new SeatLayoutPlan(
+                wind,
+                handBase,
+                handBase,
+                handBase,
+                handBase,
+                yaw,
+                List.of(),
+                List.of(),
+                List.of(),
+                List.of(),
+                List.of()
+            );
+        }
+        List<Point> privateHandPoints = new ArrayList<>(seat.hand().size());
+        List<Integer> selectedHandTileIndices = seat.selectedHandTileIndices();
+        for (int tileIndex = 0; tileIndex < seat.hand().size(); tileIndex++) {
+            privateHandPoints.add(handTilePoint(displayCenter, seat, wind, tileIndex, selectedHandTileIndices.contains(tileIndex)));
+        }
+        return new SeatLayoutPlan(
+            wind,
+            handBase,
+            handBase,
+            handBase,
+            handBase,
+            yaw,
+            List.of(),
+            List.copyOf(privateHandPoints),
+            List.of(),
+            List.of(),
+            List.of()
         );
     }
 
@@ -259,7 +312,6 @@ public final class TableRenderLayout {
             Point kakanStackBase = null;
             float kakanStackYaw = yaw;
             Point firstTileBase = null;
-            Offset kakanPlanarOffset = new Offset(0.0D, 0.0D);
             boolean concealedKan = meld.tiles().size() == 4 && meld.faceDownAt(0) && meld.faceDownAt(meld.tiles().size() - 1);
             if (concealedKan) {
                 for (int i = 0; i < meld.tiles().size(); i++) {
@@ -309,7 +361,6 @@ public final class TableRenderLayout {
                 if (claimTile) {
                     kakanStackBase = basePoint;
                     kakanStackYaw = tileYaw;
-                    kakanPlanarOffset = kakanAdjacentOffset(seat.wind(), meld.claimYawOffset());
                 }
                 lastTileWasHorizontal = claimTile;
                 placedTileCount++;
@@ -321,7 +372,7 @@ public final class TableRenderLayout {
             }
             if (meld.hasAddedKanTile() && kakanStackBase != null) {
                 placements.add(new TilePlacement(
-                    add(kakanStackBase, kakanPlanarOffset).add(0.0D, FLAT_TILE_Y + KAKAN_STACK_Y_OFFSET, 0.0D),
+                    add(kakanStackBase, offsetTowardTableCenter(seat.wind(), TILE_WIDTH + TILE_PADDING)).add(0.0D, FLAT_TILE_Y, 0.0D),
                     kakanStackYaw,
                     meld.addedKanTile(),
                     DisplayEntities.TileRenderPose.FLAT_FACE_UP
@@ -349,7 +400,7 @@ public final class TableRenderLayout {
         double drawGap = tileIndex == handSize - 1 && handSize % 3 == 2 ? TILE_PADDING * 15.0D : 0.0D;
         double stackOffset = tileIndex * (TILE_WIDTH + TILE_PADDING) + drawGap;
         double tileYOffset = selected ? SELECTED_HAND_TILE_Y_OFFSET : 0.0D;
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> handBase.add(0.0D, UPRIGHT_TILE_Y + tileYOffset, startingPos - stackOffset);
             case SOUTH -> handBase.add(-startingPos + stackOffset, UPRIGHT_TILE_Y + tileYOffset, 0.0D);
             case WEST -> handBase.add(0.0D, UPRIGHT_TILE_Y + tileYOffset, -startingPos + stackOffset);
@@ -360,8 +411,9 @@ public final class TableRenderLayout {
     private static int wallBreakTileIndex(TableRenderSnapshot snapshot) {
         int seatCount = SeatWind.values().length;
         int dicePoints = snapshot.dicePoints();
+        int breakDice = snapshot.breakDicePoints();
         int directionIndex = 4 - (((dicePoints % seatCount) - 1 + snapshot.roundIndex()) % seatCount);
-        return Math.floorMod(directionIndex * WALL_TILES_PER_SIDE + dicePoints * 2, TOTAL_WALL_TILES);
+        return Math.floorMod(directionIndex * WALL_TILES_PER_SIDE + breakDice * 2, TOTAL_WALL_TILES);
     }
 
     private static int doraIndicatorDeadWallIndex(int kanCount, int indicatorIndex) {
@@ -369,10 +421,10 @@ public final class TableRenderLayout {
     }
 
     private static TableBounds tableBoundsFromTiles(Point center) {
-        Point eastMeldStart = meldStart(center, SeatWind.EAST);
-        Point southMeldStart = meldStart(center, SeatWind.SOUTH);
-        Point westMeldStart = meldStart(center, SeatWind.WEST);
-        Point northMeldStart = meldStart(center, SeatWind.NORTH);
+        Point eastMeldStart = meldStartByDisplayDirection(center, SeatWind.EAST);
+        Point southMeldStart = meldStartByDisplayDirection(center, SeatWind.SOUTH);
+        Point westMeldStart = meldStartByDisplayDirection(center, SeatWind.WEST);
+        Point northMeldStart = meldStartByDisplayDirection(center, SeatWind.NORTH);
         double halfTileHeight = TILE_HEIGHT / 2.0D;
         double minX = northMeldStart.x();
         double maxX = southMeldStart.x();
@@ -383,13 +435,22 @@ public final class TableRenderLayout {
         return new TableBounds(centerX, centerZ, minX, maxX, minZ, maxZ);
     }
 
+    private static Point meldStartByDisplayDirection(Point center, SeatWind direction) {
+        for (SeatWind wind : SeatWind.values()) {
+            if (displayDirection(wind) == direction) {
+                return meldStart(center, wind);
+            }
+        }
+        throw new IllegalStateException("Missing meld start for display direction: " + direction);
+    }
+
     private static Point wallSlotPoint(Point center, int wallSlot) {
         SeatWind wind = WallLayout.wallSeat(wallSlot);
         int stackIndex = WallLayout.wallColumn(wallSlot);
         double stackWidth = stackIndex * WALL_TILE_STEP;
         double startingPos = (17.0D * TILE_WIDTH) / 2.0D - TILE_HEIGHT;
         double yOffset = FLAT_TILE_Y + wallLayerYOffset(WallLayout.wallLayer(wallSlot));
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> center.add(WALL_DIRECTION_OFFSET, yOffset, -startingPos + stackWidth);
             case SOUTH -> center.add(startingPos - stackWidth, yOffset, WALL_DIRECTION_OFFSET);
             case WEST -> center.add(-WALL_DIRECTION_OFFSET, yOffset, startingPos - stackWidth);
@@ -415,8 +476,9 @@ public final class TableRenderLayout {
             ));
         }
 
-        SeatWind direction = placements.getLast().face();
-        List<DeadWallPlacementMutable> reversed = placements.reversed();
+        SeatWind direction = placements.get(placements.size() - 1).face();
+        List<DeadWallPlacementMutable> reversed = new ArrayList<>(placements);
+        Collections.reverse(reversed);
         for (int index = 0; index < reversed.size(); index++) {
             DeadWallPlacementMutable placement = reversed.get(index);
             if (placement.face() == direction) {
@@ -431,10 +493,10 @@ public final class TableRenderLayout {
                 }
             }
 
-            Point base = reversed.getFirst().point();
+            Point base = reversed.get(0).point();
             double positionY = reversed.get(index % 2 == 0 ? 0 : 1).point().y();
             double offset = WALL_TILE_STEP * (index / 2);
-            placement.setPoint(switch (direction) {
+            placement.setPoint(switch (displayDirection(direction)) {
                 case EAST -> new Point(base.x(), positionY, base.z() - offset);
                 case SOUTH -> new Point(base.x() + offset, positionY, base.z());
                 case WEST -> new Point(base.x(), positionY, base.z() + offset);
@@ -454,7 +516,7 @@ public final class TableRenderLayout {
     }
 
     private static Point handDirectionBase(Point center, SeatWind wind) {
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> center.add(HAND_DIRECTION_OFFSET, 0.0D, 0.0D);
             case SOUTH -> center.add(0.0D, 0.0D, HAND_DIRECTION_OFFSET);
             case WEST -> center.add(-HAND_DIRECTION_OFFSET, 0.0D, 0.0D);
@@ -466,7 +528,7 @@ public final class TableRenderLayout {
         double halfWidthOfSixTiles = TILE_WIDTH * DISCARDS_PER_ROW / 2.0D;
         double paddingFromCenter = halfWidthOfSixTiles + TILE_HEIGHT / 2.0D + TILE_HEIGHT / 4.0D;
         double basicOffset = halfWidthOfSixTiles - TILE_WIDTH / 2.0D;
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> center.add(paddingFromCenter, 0.0D, basicOffset);
             case SOUTH -> center.add(-basicOffset, 0.0D, paddingFromCenter);
             case WEST -> center.add(-paddingFromCenter, 0.0D, -basicOffset);
@@ -476,7 +538,7 @@ public final class TableRenderLayout {
 
     private static Point meldStart(Point center, SeatWind wind) {
         double halfHeight = TILE_HEIGHT / 2.0D;
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> center.add(HALF_TABLE_LENGTH_NO_BORDER - halfHeight, 0.0D, -HALF_TABLE_LENGTH_NO_BORDER);
             case SOUTH -> center.add(HALF_TABLE_LENGTH_NO_BORDER, 0.0D, HALF_TABLE_LENGTH_NO_BORDER - halfHeight);
             case WEST -> center.add(-HALF_TABLE_LENGTH_NO_BORDER + halfHeight, 0.0D, HALF_TABLE_LENGTH_NO_BORDER);
@@ -487,7 +549,7 @@ public final class TableRenderLayout {
     private static Point riichiStickCenter(Point center, SeatWind wind) {
         double halfWidthOfSixTiles = TILE_WIDTH * DISCARDS_PER_ROW / 2.0D;
         double paddingFromCenter = halfWidthOfSixTiles - STICK_DEPTH / 2.0D;
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> center.add(paddingFromCenter, STICK_Y_OFFSET, 0.0D);
             case SOUTH -> center.add(0.0D, STICK_Y_OFFSET, paddingFromCenter);
             case WEST -> center.add(-paddingFromCenter, STICK_Y_OFFSET, 0.0D);
@@ -496,7 +558,8 @@ public final class TableRenderLayout {
     }
 
     private static boolean riichiStickLongOnX(SeatWind wind) {
-        return wind == SeatWind.SOUTH || wind == SeatWind.NORTH;
+        SeatWind direction = displayDirection(wind);
+        return direction == SeatWind.SOUTH || direction == SeatWind.NORTH;
     }
 
     private static Point cornerStickCenter(Point center, SeatWind wind, int index) {
@@ -504,7 +567,7 @@ public final class TableRenderLayout {
         int stickIndex = index % STICKS_PER_STACK;
         double halfWidthOfStick = STICK_WIDTH / 2.0D;
         double halfDepthOfStick = STICK_DEPTH / 2.0D;
-        Point start = switch (wind) {
+        Point start = switch (displayDirection(wind)) {
             case EAST -> center.add(HALF_TABLE_LENGTH_NO_BORDER - halfWidthOfStick, 0.0D, -HALF_TABLE_LENGTH_NO_BORDER + halfDepthOfStick);
             case SOUTH -> center.add(HALF_TABLE_LENGTH_NO_BORDER - halfDepthOfStick, 0.0D, HALF_TABLE_LENGTH_NO_BORDER - halfWidthOfStick);
             case WEST -> center.add(-HALF_TABLE_LENGTH_NO_BORDER + halfWidthOfStick, 0.0D, HALF_TABLE_LENGTH_NO_BORDER - halfDepthOfStick);
@@ -514,12 +577,13 @@ public final class TableRenderLayout {
     }
 
     private static boolean cornerStickLongOnX(SeatWind wind) {
-        return wind == SeatWind.EAST || wind == SeatWind.WEST;
+        SeatWind direction = displayDirection(wind);
+        return direction == SeatWind.EAST || direction == SeatWind.WEST;
     }
 
     private static Offset cornerStickOffset(SeatWind wind) {
         double amount = STICK_DEPTH + TILE_PADDING;
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> new Offset(0.0D, amount);
             case SOUTH -> new Offset(-amount, 0.0D);
             case WEST -> new Offset(0.0D, -amount);
@@ -529,7 +593,7 @@ public final class TableRenderLayout {
 
     private static Offset cornerStickMeldOffset(SeatWind wind, int firstStackCount) {
         double amount = firstStackCount * STICK_DEPTH + Math.max(0, firstStackCount - 1) * TILE_PADDING;
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> new Offset(0.0D, amount);
             case SOUTH -> new Offset(-amount, 0.0D);
             case WEST -> new Offset(0.0D, -amount);
@@ -538,7 +602,7 @@ public final class TableRenderLayout {
     }
 
     private static Offset deadWallGapOffset(SeatWind wind) {
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> new Offset(0.0D, DEAD_WALL_GAP);
             case SOUTH -> new Offset(-DEAD_WALL_GAP, 0.0D);
             case WEST -> new Offset(0.0D, -DEAD_WALL_GAP);
@@ -547,7 +611,7 @@ public final class TableRenderLayout {
     }
 
     private static Offset deadWallCornerShift(SeatWind wind) {
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> new Offset(0.0D, TILE_WIDTH);
             case SOUTH -> new Offset(-TILE_WIDTH, 0.0D);
             case WEST -> new Offset(0.0D, -TILE_WIDTH);
@@ -556,7 +620,7 @@ public final class TableRenderLayout {
     }
 
     private static Offset tileOffset(SeatWind wind) {
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> new Offset(0.0D, -TILE_WIDTH);
             case SOUTH -> new Offset(TILE_WIDTH, 0.0D);
             case WEST -> new Offset(0.0D, TILE_WIDTH);
@@ -566,7 +630,7 @@ public final class TableRenderLayout {
 
     private static Offset riichiTileOffset(SeatWind wind) {
         double amount = (TILE_HEIGHT + TILE_WIDTH) / 2.0D;
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> new Offset(0.0D, -amount);
             case SOUTH -> new Offset(amount, 0.0D);
             case WEST -> new Offset(0.0D, amount);
@@ -576,7 +640,7 @@ public final class TableRenderLayout {
 
     private static Offset lineOffset(SeatWind wind) {
         double amount = TILE_HEIGHT + TILE_PADDING;
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> new Offset(amount, 0.0D);
             case SOUTH -> new Offset(0.0D, amount);
             case WEST -> new Offset(-amount, 0.0D);
@@ -585,7 +649,7 @@ public final class TableRenderLayout {
     }
 
     private static Offset smallGapOffset(SeatWind wind) {
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> new Offset(0.0D, -TILE_PADDING);
             case SOUTH -> new Offset(TILE_PADDING, 0.0D);
             case WEST -> new Offset(0.0D, TILE_PADDING);
@@ -595,7 +659,7 @@ public final class TableRenderLayout {
 
     private static Offset verticalTileOffset(SeatWind wind) {
         double amount = TILE_WIDTH + TILE_PADDING;
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> new Offset(0.0D, amount);
             case SOUTH -> new Offset(-amount, 0.0D);
             case WEST -> new Offset(0.0D, -amount);
@@ -609,7 +673,7 @@ public final class TableRenderLayout {
 
     private static Offset horizontalTileOffset(SeatWind wind) {
         double amount = TILE_HEIGHT + TILE_PADDING;
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> new Offset(0.0D, amount);
             case SOUTH -> new Offset(-amount, 0.0D);
             case WEST -> new Offset(0.0D, -amount);
@@ -623,7 +687,7 @@ public final class TableRenderLayout {
 
     private static Offset horizontalTileGravityOffset(SeatWind wind) {
         double amount = (TILE_HEIGHT - TILE_WIDTH) / 2.0D;
-        return switch (wind) {
+        return switch (displayDirection(wind)) {
             case EAST -> new Offset(amount, 0.0D);
             case SOUTH -> new Offset(0.0D, amount);
             case WEST -> new Offset(-amount, 0.0D);
@@ -631,22 +695,25 @@ public final class TableRenderLayout {
         };
     }
 
-    private static Offset kakanAdjacentOffset(SeatWind wind, int claimYawOffset) {
-        int direction = claimYawOffset == 0 ? 1 : Integer.signum(claimYawOffset);
-        double amount = TILE_WIDTH + TILE_PADDING;
-        return offsetTowardTableCenter(wind, amount * direction);
+    private static Offset offsetTowardSeatFront(SeatWind wind, double amount) {
+        return switch (displayDirection(wind)) {
+            case EAST -> new Offset(amount, 0.0D);
+            case SOUTH -> new Offset(0.0D, amount);
+            case WEST -> new Offset(-amount, 0.0D);
+            case NORTH -> new Offset(0.0D, -amount);
+        };
     }
 
     private static Offset offsetTowardTableCenter(SeatWind wind, double amount) {
         return offsetTowardSeatFront(wind, -amount);
     }
 
-    private static Offset offsetTowardSeatFront(SeatWind wind, double amount) {
+    private static SeatWind displayDirection(SeatWind wind) {
         return switch (wind) {
-            case EAST -> new Offset(amount, 0.0D);
-            case SOUTH -> new Offset(0.0D, amount);
-            case WEST -> new Offset(-amount, 0.0D);
-            case NORTH -> new Offset(0.0D, -amount);
+            case EAST -> SeatWind.EAST;
+            case SOUTH -> SeatWind.NORTH;
+            case WEST -> SeatWind.WEST;
+            case NORTH -> SeatWind.SOUTH;
         };
     }
 
@@ -766,6 +833,3 @@ public final class TableRenderLayout {
     private record DeadWallPlacement(int wallSlot, Point point, float yaw) {
     }
 }
-
-
-
