@@ -3,6 +3,7 @@ package top.ellan.mahjong.runtime;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.RejectedExecutionException;
+import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -12,7 +13,11 @@ public final class AsyncService implements AutoCloseable {
 
     public AsyncService(Logger logger) {
         this.logger = logger;
-        this.executor = Executors.newVirtualThreadPerTaskExecutor();
+        this.executor = Executors.newCachedThreadPool(runnable -> {
+            Thread thread = new Thread(runnable, "MahjongPaper-Async");
+            thread.setDaemon(true);
+            return thread;
+        });
     }
 
     public void execute(String taskName, Runnable task) {
@@ -31,7 +36,15 @@ public final class AsyncService implements AutoCloseable {
 
     @Override
     public void close() {
-        this.executor.close();
+        this.executor.shutdown();
+        try {
+            if (!this.executor.awaitTermination(5L, TimeUnit.SECONDS)) {
+                this.executor.shutdownNow();
+            }
+        } catch (InterruptedException exception) {
+            Thread.currentThread().interrupt();
+            this.executor.shutdownNow();
+        }
     }
 }
 
